# Projet_KitBigData

./: .gitignore  README.md  check_docstrings.py  mon_programme.py  mon_programme_gui.py  pyproject.toml  requirements.txt  run_tests.sh  setup.py
.github/workflows/: cicd.yaml  test.yaml
To_do_list_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: data_taches.csv  test.py
docs/: conf.py  gestion_des_taches.rst  modules.rst  mon_programme.rst  tests.rst
docs/_build/doctrees/: check_docstrings.doctree  environment.pickle  index.doctree  modules.doctree  mon_programme.doctree  tests.doctree
docs/_build/html/: .buildinfo  check_docstrings.html  genindex.html  index.html  modules.html  mon_programme.html  objects.inv  py-modindex.html  search.html  searchindex.js  tests.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/modules/: app_gui.html  gestion_des_taches.html  supprimer_taches.html
docs/_build/html/_modules/tests/: test_gestionnaire_taches.html
docs/_build/html/_sources/: check_docstrings.rst.txt  index.rst.txt
docs/source/: conf.py  index.rst
modules/: app_gui.py  gestion_des_taches.py  supprimer_taches.py
tests/: modifier_statut_test_data.csv  test_data.csv  test_gestionnaire_taches.py
