[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "Gestionnaire de taches"
authors = [
    "Byong Hee LEE <lee.byonghee@gmail.com>",
    "Yassine Chafai <yassine.chafai@telecom-paris.fr>",
    "Youssef Elbrini <elbrini.youssef.4@gmail.com>",
    "Adrien Rogel <adrienrogel@orange.fr>",
    "Ialimy Tarakotoniaina <ialimitarakotoniaina@gmail.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
